DOMjudge Programming Contest Judging System

Version NWERC2008 - SVN
-------------------
 - Add A-Eskwadraat branding to scoreboard.
 - Modify configuration to NWERC needs.

Version 2.2.2 - 8 October 2008
------------------------------
 - Delete testcases when a problem is deleted. (Closes: #2144325)
 - Fix for Apache config generation when installing into webroot.
 - Use db values instead of the userinput to canonicalise
   any IDs. Solves an issue with blank cells in the scoreboard.
   (Closes #2144718)
 - Add a FLUSH PRIVILEGES statement after user grants during
   installation, as this may be necessary to have MySQL pick up
   all changes correctly.
 - Don't use -fstack-protector under Cygwin. (Closes: #2144713)
 - Add check for colourless problems.

Version 2.2.1 - 31 August 2008
------------------------------
 - Add missing link for adding testcases to a new problem.
 - Fix bug causing segfaults of submitdaemon. (Closes: #2046031)
 - Update shipped example data for new functionality.
 - Various documentation updates including revised team manual.

Version 2.2.0 - 11 August 2008
------------------------------
 - Do not install domjudge straight in $HOME by default.
 - [security] Add sanity check in jury interface whether basic authentication
   is enabled, and lock down jury inferface also for non-GET/POST requests
 - Fix race condition in team password check.
 - Improved MySQL query performance.
 - Move .htaccess config to apache config.
 - Fix 'NONINTERACTIVE' undefined (Closes: #1814594, thanks Maks Verver)
 - Moved beep system call to separate function in lib.misc.{c,php}.
 - Switch to UTF-8 for output. (Closes: #1742460)
 - Represent balloon colours with a symbol rather than filling the background,
   making the scoreboard less cacophonic. (Closes: #1808561)
 - Add a web based tool for tracking balloon handouts.
 - Fix C compiler warnings by using 'const char *'.
 - Fix noninteractive/logging code in websubmit to restore submitclient