@@ -41,7 +41,7 @@
 #########################################################################
 
 # The version number for this release of DOMjudge. Do not change.
-DOMJUDGE_VERSION[string]=2.2.1NWERC
+DOMJUDGE_VERSION[string]=2.2.2NWERC
 
 # These values are defaults, change to your specific needs:
 
