@@ -3,13 +3,15 @@ TOPDIR=..
 endif
 include $(TOPDIR)/Makefile.global
 
+submit=$(TOPDIR)/submit/submit -q -w
+
 check: test-normal test-fltcmp
 
 test-normal:
 	@echo "Submitting normal test sources..." ; \
 	for i in test-* ; do \
 		echo "Submitting '$$i'" ; \
-		$(TOPDIR)/submit/submit -q -p hello "$$i" ; \
+		$(submit) -p hello "$$i" ; \
 		sleep 1 ; \
 	done
 
@@ -17,7 +19,7 @@ test-fltcmp:
 	@echo "Submitting fltcmp test sources..." ; \
 		for i in fltcmp-test-* ; do \
 		echo "Submitting '$$i'" ; \
-		$(TOPDIR)/submit/submit -q -p fltcmp "$$i" ; \
+		$(submit) -p fltcmp "$$i" ; \
 		sleep 1 ; \
 	done
 
@@ -25,7 +27,7 @@ test-stress:
 	@echo "Submitting stress test sources..." ; \
 	for i in stress-test-* ; do \
 		echo "Submitting '$$i'" ; \
-		$(TOPDIR)/submit/submit -q -p hello "$$i" ; \
+		$(submit) -p hello "$$i" ; \
 		sleep 1 ; \
 	done
 
